fix project info

--- a/oss-archetype-micro-service-config/src/main/resources/archetype-resources/pom.xml
+++ b/oss-archetype-micro-service-config/src/main/resources/archetype-resources/pom.xml
@@ -64,7 +64,7 @@
                         <configuration>
                             <artifactItems>
                                 <artifactItem>
-                                    <groupId>com.yirendai.infra</groupId>
+                                    <groupId>cn.home1</groupId>
                                     <artifactId>oss-configlint</artifactId>
                                     <version>${oss-configlint.version}</version>
                                     <type>jar</type>
